--- a/router/graphViz/SpindleControl.dox
+++ b/router/graphViz/SpindleControl.dox
@@ -4,6 +4,8 @@
     This diagram illustrates the .hal components I use with a GS2 VFD using the serial communications.
     Note, pid is used to get the correct rpm from the vfd. 
 
+    The fault relay is documented in the estoplatch documentation.
+
     \dot
         digraph structs {
             concentrate=true
