--- a/latheMesa/graphViz/StepperControl.dox
+++ b/latheMesa/graphViz/StepperControl.dox
@@ -3,7 +3,6 @@
 
 
    This diagram illustrates the .hal components and connections for stepper motor control.
-
    Default open loop uses pid.x component to convert joint.L.motor_pos_cmd into a velocity command for the stepgen. The feedback signal for the pid and the joint is the stepgen position-fb.
 
 \dot
@@ -68,7 +67,7 @@
       }
 
       subgraph cluster_stepgen{
-            label="stepgen"
+            label="hm.0.stepgen.00"
             stepgen [shape="box" label=<
                <TABLE>
                   <TR><TD>
@@ -202,15 +201,7 @@
     \enddot
 */
 
-
-
-
-
-
-
-
-
-
+/* PROPOSED */
 
 /**<br>
  *@addtogroup StepperControlOpenLoopProposed
@@ -256,7 +247,7 @@
                         <TD>
                            <TABLE CELLBORDER="0" BORDER="0">
                               <TR><TD ALIGN="LEFT" port="i0">command</TD></TR>
-                              <TR><TD ALIGN="LEFT" port="i1">vel-cmd</TD></TR>
+                              <TR><TD ALIGN="LEFT" port="i1">command-deriv</TD></TR>
                            </TABLE>
                         </TD>
                         <TD>
@@ -282,7 +273,7 @@
       }
 
       subgraph cluster_stepgen{
-            label="stepgen"
+            label="hm.0.stepgen.00"
             stepgen [shape="box" label=<
                <TABLE>
                   <TR><TD>
@@ -311,9 +302,8 @@
       joint:o0      -> pid:i0       [label="x-pos-cmd" fontsize = "12" fontcolor="blue" color="blue"];
       joint:o1      -> pid:i1       [label="x-vel-cmd" fontsize = "12" fontcolor="blue" color="red"];
       pid:o0:e      -> stepgen:i0:w [label="x-output" fontsize = "12" fontcolor="blue" color="blue"];
-      stepgen:o0:e  -> pid:f0:s     [label="x-stepgen-fb" fontsize = "12" fontcolor="red" color="blue"];
-      encoder:o1    -> joint:i0:w   [label="x-pos-fb" fontsize = "12" fontcolor="blue" color="red"];
-
+      stepgen:o0:e  -> pid:f0:s     [label="x-pos-fb" fontsize = "12" fontcolor="blue" color="blue"];
+      encoder:o0    -> joint:i0:w   [label="x-pos-encoder" fontsize = "12" fontcolor="red" color="red"];
    }
 \enddot
 
@@ -362,7 +352,7 @@
                             <TD>
                                 <TABLE CELLBORDER="0" BORDER="0">
                                    <TR><TD ALIGN="LEFT" port="i0">command</TD></TR>
-                                   <TR><TD ALIGN="LEFT" port="i0">command-deriv</TD></TR>
+                                   <TR><TD ALIGN="LEFT" port="i1">command-deriv</TD></TR>
                                 </TABLE>
                             </TD>
                             <TD>
@@ -422,7 +412,7 @@
             joint:o1    -> pid:i1       [label="x-vel-cmd" fontsize = "12" fontcolor="blue" color="red"];
             pid:o0      -> stepgen:i0   [label="x-output" fontsize = "12" fontcolor="blue" color="blue"];
       
-            encoder:o0  -> joint:i0:w [label="x-pos-fb" fontsize = "12" fontcolor="blue" color="blue"];
+            encoder:o0  -> joint:i0:w [label="x-pos-encoder" fontsize = "12" fontcolor="red" color="blue"];
             encoder:o0  -> pid:f0:s   [label="x-pos-fb" fontsize = "12" fontcolor="blue" color="blue"];
             encoder:o1  -> pid:f1:s   [label="x-vel-fb" fontsize = "12" fontcolor="blue" color="red"];
         }
