--- a/latheMesa/graphViz/SpindleControl.dox
+++ b/latheMesa/graphViz/SpindleControl.dox
@@ -111,32 +111,59 @@
                 ]
             }
 
-            spindle_0 -> pid_s -> pwmgen -> gmoccapy [style=invis];
+            subgraph cluster_gpio {
+                label="hm.0.gpio"
+                gpio [shape="box" label=<
+                    <TABLE CELLBORDER="0" BORDER="0">
+                       <TR><TD ALIGN="LEFT"  port="in0">in.017</TD></TR>
+                        <TR><TD ALIGN="LEFT" port="in1">in.018</TD></TR>                  
+                        <TR><TD ALIGN="LEFT" port="in2">in.019</TD></TR> 
+                        <TR><TD ALIGN="LEFT" port="in3">in.020</TD></TR> 
+                        <TR><TD ALIGN="LEFT" port="in4">in.021</TD></TR> 
 
-            spindle_0:o0 -> pid_s:i0    [label="spindle-vel-cmd-rpm" fontsize = "12" fontcolor="blue" color="blue"];
-            spindle_0:o1 -> pid_s:i1    [label="spindle-enable"      fontsize = "12" fontcolor="blue" color="blue"];
-            spindle_0:o2 -> gpioMM      [label="spindle-cw"  fontsize = "12" fontcolor="blue" color="blue"];
-            spindle_0:o3 -> pid_s:i2    [color="blue"];
+                        <TR><TD ALIGN="LEFT" port="in8">out.025</TD></TR>                  
+                        <TR><TD ALIGN="LEFT" port="in9">out.026</TD></TR>                  
+                        <TR><TD ALIGN="LEFT" port="in10">out.027</TD></TR>                  
+                    </TABLE>
+                >
+                ]
+            }
 
-            spindle_0:o1 -> gpioNN      [label="spindle-enable"  fontsize = "12" fontcolor="blue" color="blue"];
+            n0 [shape="point" style="invis"];
+            n1 [shape="point" style="invis"];
+            n2 [shape="point" style="invis"];
+            n3 [shape="point" style="invis"];
+            n4 [shape="point" style="invis"];
+
+            spindle_0:o0 -> pid_s:i0      [label="spindle-vel-cmd-rpm" fontsize = "12" fontcolor="blue" color="blue"];
+            spindle_0:o1 -> pid_s:i1      [label="spindle-enable"      fontsize = "12" fontcolor="blue" color="blue"];
+            spindle_0:o2 -> gpio:in9      [label="spindle-cw"  fontsize = "12" fontcolor="blue" color="blue"];
+            spindle_0:o3 -> pid_s:i2      [color="blue"];
+
+            spindle_0:o1 -> gpio:in8      [label="spindle-enable"  fontsize = "12" fontcolor="blue" color="blue"];
 
 
-            pid_s:o0 -> pwmgen:i0       [label="spindle-output"     fontsize = "12" fontcolor="blue" color="blue"];
-            pwmgen:o0 -> gpio00         [label="spindle-pwm"         fontsize = "12" fontcolor="blue" color="blue"];
-            spindle_0:o1 -> pwmgen:i1   [label="spindle-enable"         fontsize = "12" fontcolor="blue" color="blue"];
+            pid_s:o0 -> pwmgen:i0        [label="spindle-output"     fontsize = "12" fontcolor="blue" color="blue"];
+            pwmgen:o0 -> gpio:in10       [label="spindle-pwm"         fontsize = "12" fontcolor="blue" color="blue"];
+            spindle_0:o1 -> pwmgen:i1    [label="spindle-enable"         fontsize = "12" fontcolor="blue" color="blue"];
 
             encoder:o0 -> spindle_0:i0   [label="spindle-revs"         fontsize = "12" fontcolor="blue" color="blue"];
             encoder:o1 -> spindle_0:i1   [label="spindle-vel-fb-rps"   fontsize = "12" fontcolor="blue" color="blue"];
             encoder:o1 -> pid_s:f0       [color="blue"];
             encoder:o2 -> pid_s:i2       [label="spindle-index-enable"  fontsize = "12" fontcolor="blue" color="blue"];
 
-            {rank=same gpio00 gpioNN gpioMM}
+            n0 -> gpio:in0 [label="estop-G540-fault" dir=back];
+            n1 -> gpio:in1 [label="x-max-limit" dir=back];
+            n2 -> gpio:in2 [label="z-min-limit" dir=back];
+            n3 -> gpio:in3 [label="manual-spindle-on" dir=back];
+            n4 -> gpio:in4 [label="manual-spindle-cw" dir=back];
         }
     \enddot
 */
 
 /*
 
+            spindle_0 -> pid_s -> pwmgen -> gmoccapy [style=invis];
 
 */
 
