--- a/latheMesa/graphViz/StepperControl.dox
+++ b/latheMesa/graphViz/StepperControl.dox
@@ -1,6 +1,7 @@
 /**<br>
- *@addtogroup StepperControlOpenLoop
-
+    \file StepperControl.dox
+    *@addtogroup StepperControlOpenLoop
+    \brief This file contains diagrams for controlling the stepper motors with HAL components.
 
    This diagram illustrates the .hal components and connections for stepper motor control.
 
