--- a/latheMesa/graphViz/SpindleWiring.dox
+++ b/latheMesa/graphViz/SpindleWiring.dox
@@ -5,9 +5,11 @@
     \brief This file illustrates the wiring for the Gecko G540 used with my lathe spindle.
 
     I wired a parallel port cable pig tail between Mesa boards and the G540, I am NOT loading a parallel port component. This illustrates the hardware connections.
-    
-    Notice, from the perspective of HAL, the "input" pins drive other HAL signal (act as outputs).
 
+    An 8 wire conductor cables (four colored pairs) runs from control box to VFD.
+    Two wires run to the max x limit switch (red/black).
+    
+    The VFD wiring originally used
     \dot
         digraph structs {
             concentrate=true
@@ -60,71 +62,76 @@
                 >]
             }
 
+            subgraph cluster_dio{
+                subgraph d {
+                    dio[shape="box" label=<
+                                    <TABLE CELLBORDER="0" BORDER="0">
+                                        <TR><TD ALIGN="LEFT" port="i10"> max x limit</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="i11"> min z limit</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="i12"> manual spindle on</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="i13"> manual spindle cw</TD></TR> 
+                                    </TABLE>
+                    >]
+                }
+                label="digital inputs"
+            }
+
             subgraph cluster_vfd{
                 label="Minarek VFD TB501"
-                MinarekVFD[shape="box" label=<
-                                <TABLE CELLBORDER="0" BORDER="0">
-                                    <TR><TD ALIGN="LEFT" port="D"> D Direction</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="S3"> S3 GND</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="S2"> S2 Wiper (0-10V)</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="S1"> S1 10VDC</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="E1"> E1 Common</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="E2"> E2 Enable</TD></TR> 
-                                </TABLE>
-                >]
+                subgraph v {
+                    MinarekVFD[shape="box" label=<
+                                    <TABLE CELLBORDER="0" BORDER="0">
+                                        <TR><TD ALIGN="LEFT" port="D"> D Direction</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="S3"> S3 GND</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="S2"> S2 Wiper (0-10V)</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="S1"> S1 10VDC</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="E1"> E1 Common</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="E2"> E2 Enable</TD></TR> 
+                                    </TABLE>
+                    >]
+                }
             }
 
-            subgraph cluster_dio{
-                label="digital inputs"
-                dio[shape="box" label=<
-                                <TABLE CELLBORDER="0" BORDER="0">
-                                    <TR><TD ALIGN="LEFT" port="i10"> max x limit</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="i11"> min z limit</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="i12"> manual spindle on</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="i13"> manual spindle cw</TD></TR> 
-                                </TABLE>
-                >]
-            }
+            g540 [shape="box" label="G540 FAULT"];
 
-            {rank = same; dio MinarekVFD}
-
-            n00 [shape="point" style="invis"];
-            n01 [shape="point" style="invis"];
-            n02 [shape="point" style="invis"];
-            n03 [shape="point" style="invis"];
-            n04 [shape="point" style="invis"];
             n10 [shape="point" style="invis"];
             n11 [shape="point" style="invis"];
             n12 [shape="point" style="invis"];
-
-            terminals:p1 -> dio:i10 [label="max x limit" dir=back];
-            terminals:p2 -> dio:i11 [label="min z limit" dir=back];
-            terminals:p3 -> dio:i12 [label="manual spindle on" dir=back];
-            terminals:p4 -> dio:i13 [label="manual spindle cw" dir=back];
-
-            g540 [shape="box" label="G540 FAULT"];
+            n13 [shape="point" style="invis"];
+            n01 [shape="point" style="invis"];
+            n14 [shape="point" style="invis"];
+            n17 [shape="point" style="invis"];
+            n15 [shape="point" style="invis"];
 
             pigtail:o17 -> terminals:p5;
             pigtail:o1 -> terminals:p6;
             pigtail:o14 -> terminals:p8;
             pigtail:i15 -> g540 [ dir=back];
             
-            terminals:p5:se -> MinarekVFD:D [label="spindle ccw"];
-            terminals:p7 -> MinarekVFD:S3 [label=""];
-            terminals:p8 -> MinarekVFD:S2 [label="0-10V"];
-            terminals:p9 -> MinarekVFD:S1 [label="10VDC" dir=back];
-            terminals:p12 -> MinarekVFD:E1 [label=""];
-            terminals:p6 -> MinarekVFD:E2 [label="spindle on"];
+            terminals:p1 -> dio:i10 [label="red" dir=back];
 
-            n00 -> pigtail:i10 [label="max-x-limit" dir=back];
-            n01 -> pigtail:i11 [label="min-z-limit" dir=back];
-            n02 -> pigtail:i12 [label="manual-spindle-on" dir=back];
-            n03 -> pigtail:i13 [label="manual-spindle-cw" dir=back];
-            n04 -> pigtail:i15 [label="estop-G540-fault" dir=back];
+            terminals:p3 -> dio:i12 [label="brown" dir=back];
+            terminals:p4 -> dio:i13 [label="brown/white" dir=back];
 
-            n10 -> pigtail:o1  [label="spindle-cw"];
-            n11 -> pigtail:o17 [label="spindle-on"];
-            n12 -> pigtail:o14 [label="spindle-pwm"];
+            terminals:p5    -> MinarekVFD:D  [label="blue"];
+            terminals:p6    -> MinarekVFD:E2 [label="blue/white"];
+            terminals:p7    -> MinarekVFD:S3 [label="green"];
+            terminals:p8    -> MinarekVFD:S2 [label="green/white"];
+            terminals:p9    -> MinarekVFD:S1 [label="orange" dir=back];
+            terminals:p12   -> MinarekVFD:E1 [label="orange/white" dir=none];
+
+            n10 -> pigtail:i10 [label="max-x-limit" dir=back];
+            n11 -> pigtail:i11 [label="min-z-limit" dir=back];
+            n12 -> pigtail:i12 [label="spindle-on-override" dir=back];
+            n13 -> pigtail:i13 [label="spindle-cw-override" dir=back];
+            
+
+            n01 -> pigtail:o1  [label="spindle-cw"];
+            n14 -> pigtail:o14 [label="spindle-pwm"];
+            n17 -> pigtail:o17 [label="spindle-enable"];
+            n15 -> pigtail:i15 [label="estop-G540-fault" dir=back];
+
+            {rank=same n10 n11 n12 n13 n01 n14 n17 n15};
 
             pigtail:i10 -> terminals:p1  [dir=back];
             pigtail:i11 -> terminals:p2  [dir=back];
@@ -144,10 +151,4 @@
             terminal0:o8 -> pigtail:o8 [label="astep"];
             terminal0:o9 -> pigtail:o9 [label="adir"];
             terminal0:o16 -> pigtail:o16 [label="charge pump"];
-
-            terminals:p1 -> pigtail:i10 [label="max-home-x"];
-            terminals:p2 -> pigtail:i11 [label="min-home-z"];
-            terminals:p3 -> pigtail:i12 [label="manual-spindle-enable"];
-            terminals:p4 -> pigtail:i13 [label="manual-spindle-direction"];
-
 */
