--- a/latheMesa/graphViz/Estop.dox
+++ b/latheMesa/graphViz/Estop.dox
@@ -1,5 +1,36 @@
 /*!
     \file Estop.dox
+
+    \addtogroup HAL
+
+    The configuration .ini specifies a HAL section.
+
+    \code
+        [HAL]
+        TWOPASS = on
+        HALUI = halui
+        HALFILE = latheMesa.hal
+        HALFILE = LatheSpindle.hal
+        HALFILE = custom.hal
+        POSTGUI_HALFILE = postgui_call_list.hal
+        SHUTDOWN = shutdown.hal
+    \endcode
+
+    HALFILE
+        - latheMesa.hal Traditional configuration file with basic stepper control.
+        - LatheSpindle.hal Configures the spindle components including encoder and pid/pwmgen for the VFD.
+        - custom.hal (Empty)
+
+    POSTGUI_HALFILE These files are loaded post GUI, in the order they appear
+        - postgui_call_list.hal - Contains the following list of files to load after the GUI.
+            - spindle_postgui.hal - Filters spindle speed for pyvcp display.
+            - joypad_jog_speed.hal - Logitech joypad jogging speed functionality.
+            - joypad_xz.hal - Connects joypad to joystick controls for lathe.
+            - joypad_extras.hal - Connnects jogging to the digital joypad, program run, pause, resume and manual/auto modoe of operation. 
+
+    SHUTDOWN
+        - shutdown.hal (empty)
+
     \addtogroup EStopLatch
 
     This diagram illustrates the .hal components for the estop latch logic of my lathe.
