--- a/latheMesa/graphViz/SpindleWiring.dox
+++ b/latheMesa/graphViz/SpindleWiring.dox
@@ -67,8 +67,8 @@
                                     <TABLE CELLBORDER="0" BORDER="0">
                                         <TR><TD ALIGN="LEFT" port="i10"> max x limit</TD></TR> 
                                         <TR><TD ALIGN="LEFT" port="i11"> min z limit</TD></TR> 
-                                        <TR><TD ALIGN="LEFT" port="i12"> spindle on override</TD></TR> 
-                                        <TR><TD ALIGN="LEFT" port="i13"> spindle cw override</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="i12"> spindle cw override</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="i13"> spindle enable override</TD></TR> 
                                     </TABLE>
                     >]
                 }
@@ -121,7 +121,7 @@
 
             n10 -> pigtail:i10 [label="max-x-limit" dir=back];
             n11 -> pigtail:i11 [label="min-z-limit" dir=back];
-            n12 -> pigtail:i12 [label="spindle-on-override" dir=back];
+            n12 -> pigtail:i12 [label="spindle-enable-override" dir=back];
             n13 -> pigtail:i13 [label="spindle-cw-override" dir=back];
             
 
